--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,7 +1,7 @@
 on:
   push:
     paths:
-      - 'path/to/folder/**'
+      - '*/Frontend/**'
   pull_request:
     paths:
       - 'path/to/folder/**'
