--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -11,7 +11,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
       
-      # Add more steps as needed
-      - name: Run a script
-        run: cd frontend/ && docker build -t my-react-app .
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Build and push Docker image
+        env:
+          ECR_REGISTRY: 590183924135.dkr.ecr.us-east-1.amazonaws.com
+          IMAGE_NAME: frontend-test
+        run: |
+          cd frontend/ && docker build -t $ECR_REGISTRY/$IMAGE_NAME:latest  
+          docker push $ECR_REGISTRY/$IMAGE_NAME:latest
+          cd frontend/ && docker build -t my-react-app .
+
