--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,20 +16,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1
-
-
-
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-    - name: Build and push Docker image
-      env:
-        ECR_REGISTRY: 168933414344.dkr.ecr.ap-south-1.amazonaws.com
-        IMAGE_NAME: offsetmax-graphql-db-dev
-      run: |
-        docker build -t $ECR_REGISTRY/$IMAGE_NAME:latest  .
-        docker push $ECR_REGISTRY/$IMAGE_NAME:latest
+        aws-region: us-east-1
     
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
@@ -42,20 +29,19 @@ jobs:
     - name: terraform apply
       run: terraform apply -auto-approve
     
-    - name: terraform destroy
-      run: terraform destroy -auto-approve
+
 
     - name: Setup EKS Kubectl
       uses: zachguo/setup-eks-kubectl@v1
       with:
         cluster: offsetmax-cluster 
-        region: ap-south-1
+        region: us-east-1
 
 
 
 
     - name: Update kube config
-      run: aws eks update-kubeconfig --name offsetmax-cluster
+      run: aws eks update-kubeconfig --name my-cluster
 
     - name: installing eksctl
       run:
@@ -69,7 +55,7 @@ jobs:
          sudo mv /tmp/eksctl /usr/local/bin
 
     - name: install oidc
-      run: eksctl utils associate-iam-oidc-provider --region=ap-south-1 --cluster=offsetmax-cluster --approve
+      run: eksctl utils associate-iam-oidc-provider --region=us-east-1 --cluster=my-cluster --approve
 
     - name: Installing the AWS Load Balancer policy
       run: |
@@ -81,11 +67,11 @@ jobs:
     - name: Creating load Balancer Controller service account and roles
       run: |
         eksctl create iamserviceaccount \
-        --cluster=offsetmax-cluster \
+        --cluster=my-cluster \
         --namespace=kube-system \
         --name=aws-load-balancer-controller \
         --role-name AmazonEKSLoadBalancerControllerRole \
-        --attach-policy-arn=arn:aws:iam::461220895587:policy/AWSLoadBalancerControllerIAMPolicy \
+        --attach-policy-arn=arn:aws:iam::590183924135:policy/AWSLoadBalancerControllerIAMPolicy \
         --override-existing-serviceaccounts \
         --approve
 
@@ -103,11 +89,11 @@ jobs:
          helm repo add eks https://aws.github.io/eks-charts
          helm install aws-load-balancer-controller eks/aws-load-balancer-controller \
            -n kube-system \
-           --set clusterName=offsetmax-cluster \
+           --set clusterName=my-cluster \
             --set serviceAccount.create=false \
             --set serviceAccount.name=aws-load-balancer-controller \
-           --set region=ap-south-1 \
-            --set vpcId=vpc-011f1b733d94aa911 \
+           --set region=us-east-1 \
+            --set vpcId= \
             --set image.repository=602401143452.dkr.ecr.us-east-2.amazonaws.com/amazon/aws-load-balancer-controller
 
     - name: Sleep for 30 seconds
