--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -93,7 +93,7 @@ jobs:
             --set serviceAccount.create=false \
             --set serviceAccount.name=aws-load-balancer-controller \
            --set region=us-east-1 \
-            --set vpcId= \
+            --set vpcId=vpc-069630328c95e70a5 \
             --set image.repository=602401143452.dkr.ecr.us-east-2.amazonaws.com/amazon/aws-load-balancer-controller
 
     - name: Sleep for 30 seconds
