--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,7 @@ jobs:
 
 
     - name: Setup EKS Kubectl
-      uses: zachguo/setup-eks-kubectl@v2
+      uses: zachguo/setup-eks-kubectl@v1
       with:
         cluster: my-cluster 
         region: us-east-1
@@ -41,7 +41,7 @@ jobs:
 
 
     - name: Update kube config
-      run: aws eks update-kubeconfig --name my-cluster
+      run: aws eks update-kubeconfig --name my-cluster --region us-east-1
 
     # - name: installing eksctl
     #   run:
@@ -57,12 +57,12 @@ jobs:
     # - name: install oidc
     #   run: eksctl utils associate-iam-oidc-provider --region=us-east-1 --cluster=my-cluster --approve
 
-    - name: Installing the AWS Load Balancer policy
+    - name: Installing the AWS Load Balancer
       run: |
-       curl -O https://raw.githubusercontent.com/kubernetes-sigs/aws-load-balancer-controller/v2.7.2/docs/install/iam_policy.json \
+       curl -O https://raw.githubusercontent.com/kubernetes-sigs/aws-load-balancer-controller/v2.5.4/docs/install/iam_policy.json \
        aws iam create-policy \
-       --policy-name AWSLoadBalancerControllerIAMPolicy \
-       --policy-document file://iam_policy.json  
+         --policy-name AWSLoadBalancerControllerIAMPolicy \
+         --policy-document file://iam_policy.json  
   
     - name: Creating load Balancer Controller service account and roles
       run: |
