--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -101,5 +101,8 @@ jobs:
     #   run: sleep 30s
     #   shell: bash
 
+    - name: Deploy to EKS
+      run: |
 
+        kubectl create namespace graphql-dev-ns
     
