--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -101,8 +101,8 @@ jobs:
     #   run: sleep 30s
     #   shell: bash
 
-    - name: Deploy to EKS
-      run: |
+    # - name: Deploy to EKS
+    #   run: |
 
-        kubectl get pods -n kube-system
+    #     kubectl get pods -n kube-system
     
