--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -28,5 +28,18 @@ jobs:
         run: |
           cd backend/ && docker build -t $ECR_REGISTRY/$IMAGE_NAME:latest  .
           docker push $ECR_REGISTRY/$IMAGE_NAME:latest
+      - name: Setup EKS Kubectl
+        uses: zachguo/setup-eks-kubectl@v1
+        with:
+          cluster: my-cluster 
+          region: us-east-1
+
+
+
+
+      - name: Update kube config
+        run: aws eks update-kubeconfig --name my-cluster --region us-east-1
+
+
          
 
