--- a/frontend/ingress.yaml
+++ b/frontend/ingress.yaml
@@ -25,12 +25,11 @@ spec:
   rules:
     - host: 
       http:
-        paths:
-          - path: /api
+          - path: /
             pathType: Prefix
             backend:
               service:
-                name: backend
+                name: frontend
                 port:
-                  number: 8080
+                  number: 3000
 
