--- a/.github/workflows/postgress-pipeline.yml
+++ b/.github/workflows/postgress-pipeline.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
 
           
-          kubectl apply -f postgress.yaml
+          kubectl apply -f postgress/postgress.yaml
 
 
          
