--- a/.github/workflows/frontend-pipeline.yml
+++ b/.github/workflows/frontend-pipeline.yml
@@ -39,4 +39,9 @@ jobs:
 
       - name: Update kube config
         run: aws eks update-kubeconfig --name my-cluster --region us-east-1
+      - name: Deploy to EKS
+        run: |
+
+          cd frontend/
+          kubectl apply -f frontend.yaml
          
