--- a/.github/workflows/backend-pipeline.yml
+++ b/.github/workflows/backend-pipeline.yml
@@ -39,6 +39,11 @@ jobs:
 
       - name: Update kube config
         run: aws eks update-kubeconfig --name my-cluster --region us-east-1
+      - name: Deploy to EKS
+        run: |
+
+          cd backend/
+          kubectl apply -f backend.yaml
 
 
          
