--- a/frontend/frontend.yaml
+++ b/frontend/frontend.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: 590183924135.dkr.ecr.us-east-1.amazonaws.com/frontend-test
+          image: 590183924135.dkr.ecr.us-east-1.amazonaws.com/frontend-test:latest
           ports:
             - containerPort: 3000
 ---
