--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -1,7 +1,7 @@
 name: Node js app deploy to EKS
 on:
   push:
-    branches: [ "" ]
+    branches: [ "main" ]
 
 
 jobs:
@@ -101,8 +101,8 @@ jobs:
     #   run: sleep 30s
     #   shell: bash
 
-    # - name: Deploy to EKS
-    #   run: |
+    - name: Deploy to EKS
+      run: |
 
-    #     kubectl get pods -n kube-system
+        kubectl get pods -n my-app
     
