--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -104,5 +104,5 @@ jobs:
     - name: Deploy to EKS
       run: |
 
-        kubectl get pods -n my-app
+        kubectl describe pod backend-57f65b9b69-c5g8s -n my-app
     
