--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -106,4 +106,4 @@ jobs:
 
         kubectl describe pod backend-57f65b9b69-c5g8s -n my-app
         kubectl describe pod postgres-95b64b786-nlnsd -n my-app
-    
+        kubectl get pvc postgres-pvc -n my-app
