--- a/postgress/postgress.yaml
+++ b/postgress/postgress.yaml
@@ -38,7 +38,7 @@ spec:
               name: postgres-storage
       volumes:
         - name: postgres-storage
-          hostpath:
+          hostPath:
             path: /tmp/data
 
 ---
