--- a/frontend/ingress.yaml
+++ b/frontend/ingress.yaml
@@ -4,22 +4,17 @@ metadata:
   name: ingress
   namespace: my-app
   annotations:
-    # Ingress Core Settings
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    # Health Check Settings
-    # alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
-    # alb.ingress.kubernetes.io/healthcheck-port: traffic-port
-    # alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
-    # alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
-    # alb.ingress.kubernetes.io/success-codes: '200'
-    # alb.ingress.kubernetes.io/healthy-threshold-count: '2'
-    # alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
-    # SSL certificate Setting
-    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
-    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:168933414344:certificate/b42b3726-ca13-43a5-80ce-436fee64c94e ## need to change
-    # alb.ingress.kubernetes.io/ssl-redirect: '443'
+    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
+    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
+    alb.ingress.kubernetes.io/healthcheck-path: /
+    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
+    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
+    alb.ingress.kubernetes.io/success-codes: '200'
+    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
+    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
 spec:
   ingressClassName: alb
   rules:
