--- a/frontend/ingress.yaml
+++ b/frontend/ingress.yaml
@@ -18,8 +18,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-    - host: 
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
