--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -1,7 +1,7 @@
 name: Node js app deploy to EKS
 on:
   push:
-    branches: [ "" ]
+    branches: [ "main" ]
 
 
 jobs:
@@ -103,8 +103,6 @@ jobs:
 
     - name: Deploy to EKS
       run: |
+         kubectl logs -n my-app -l app=backend
 
-        kubectl describe pod backend-57f65b9b69-c5g8s -n my-app
-        kubectl describe pod postgres-95b64b786-nlnsd -n my-app
-        kubectl get pvc postgres-pvc -n my-app
-        kubectl describe pvc postgres-pvc -n my-app
+
