--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,11 @@
-# Stage 1: Build React App
-FROM node:14.17.0 AS build
+FROM node:14.17.0 
 WORKDIR /app
 COPY . .
 RUN npm install
 RUN npm run build
-
-# Stage 2: Serve React App with Nginx
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 3000
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm",  "start"]
+
 
 
 
