--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -103,6 +103,6 @@ jobs:
 
     - name: Deploy to EKS
       run: |
-         kubectl get pod -n my-app
+         kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/high-availability-1.21+.yaml
 
 
