--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -105,6 +105,6 @@ jobs:
       run: |
          # kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/high-availability-1.21+.yaml
 
-           kubectl get pods 
+           kubectl get pods -n kube-system
 
 
