--- a/.github/workflows/backend-pipeline.yml
+++ b/.github/workflows/backend-pipeline.yml
@@ -45,6 +45,7 @@ jobs:
           cd backend/
           kubectl apply -f backend.yaml
           kubectl get pods -n my-app
+          kubectl describe svc postgree -n my-app
 
 
          
