--- a/frontend/ingress.yaml
+++ b/frontend/ingress.yaml
@@ -20,7 +20,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /health
+          - path: /employees
             pathType: Prefix
             backend:
               service:
