--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,5 +30,6 @@ COPY --from=builder /app/main .
 EXPOSE 8080
 
 # Command to run the executable
-CMD ["./main"]
+# CMD ["./main"]
+ENTRYPOINT ["/app/main"]
 
