--- a/postgress/postgress.yaml
+++ b/postgress/postgress.yaml
@@ -24,8 +24,8 @@ spec:
         - name: postgres
           image: postgres:13
           env:
-            # - name: POSTGRES_DB
-            #   value: mydatabase
+            - name: POSTGRES_DB
+              value: mydatabase
             - name: POSTGRES_USER
               value: myuser
             - name: POSTGRES_PASSWORD
