--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,10 @@
-# Use the official Golang image as a build stage
-FROM golang:1.19 AS builder
+# Use an appropriate base image for building the Go application
+FROM golang:1.19-alpine AS builder
 
 # Set the Current Working Directory inside the container
 WORKDIR /app
 
-# Copy go mod and sum files
+# Copy the go.mod and go.sum files
 COPY go.mod go.sum ./
 
 # Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
@@ -16,20 +16,22 @@ COPY . .
 # Build the Go app
 RUN go build -o main .
 
-# Start a new stage from scratch
-FROM golang:1.19-alpine
+# Use a minimal image to run the Go application
+FROM alpine:latest
 
 # Set the Current Working Directory inside the container
-WORKDIR /root/
+WORKDIR /app
 
-# Copy the Pre-built binary file from the previous stage
+# Copy the pre-built binary file from the builder stage
 COPY --from=builder /app/main .
 
+# Make sure the binary is executable
+RUN chmod +x ./main
 
 # Expose port 8080 to the outside world
 EXPOSE 8080
 
 # Command to run the executable
-# CMD ["./main"]
-ENTRYPOINT ["/app/main"]
+CMD ["./main"]
+
 
