--- a/backend/backend.yaml
+++ b/backend/backend.yaml
@@ -39,7 +39,7 @@ metadata:
   name: backend
   namespace: my-app
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 8080
       targetPort: 8080
