--- a/.github/workflows/backend-pipeline.yml
+++ b/.github/workflows/backend-pipeline.yml
@@ -44,8 +44,10 @@ jobs:
 
           cd backend/
           kubectl apply -f backend.yaml
+          kubectl apply -f ingress.yaml
           kubectl get pods -n my-app
           kubectl describe svc postgres -n my-app
+          
 
 
          
