--- a/frontend/ingress.yaml
+++ b/frontend/ingress.yaml
@@ -27,3 +27,25 @@ spec:
                 name: frontend
                 port:
                   number: 3000
+
+spec:
+  ingressClassName: alb
+  rules:
+    - http:
+        paths:
+          - path: /employees
+            pathType: Prefix
+            backend:
+              service:
+                name: backend
+                port:
+                  number: 8080
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend
+                port:
+                  number: 3000
