--- a/backend/backend.yaml
+++ b/backend/backend.yaml
@@ -38,7 +38,7 @@ metadata:
   name: backend
   namespace: my-app
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 8080
       targetPort: 8080
