--- a/frontend/frontend.yaml
+++ b/frontend/frontend.yaml
@@ -20,7 +20,7 @@ spec:
           - containerPort: 3000
           env:
           - name: REACT_APP_SERVER_URL
-            value: "http://backend.my-app.svc.cluster.local/employees"
+            value: "http://backend.my-app.svc.cluster.local:8080/employees"
 ---
 apiVersion: v1
 kind: Service
