--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -27,7 +27,8 @@ jobs:
     - name: Terraform Plan
       run: terraform plan
     - name: terraform apply
-      run: terraform apply -auto-approve
+      # run: terraform apply -auto-approve
+      run: terraform destroy
     
 
 
