--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -28,7 +28,8 @@ jobs:
       run: terraform plan
     - name: terraform apply
       # run: terraform apply -auto-approve
-      run: terraform destroy
+      run: terraform destroy -y
+      
     
 
 
